convertedToMDAPI/objects/AccountPurpose__c.object
<CustomObject>
    <label>Account Purpose</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>AP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Purposes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purposes</relationshipLabel>
        <relationshipName>Purposes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <referenceTo>Purpose__c</referenceTo>
        <relationshipLabel>Purposes</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SitePurpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Site&#39;s Purpose the account is related to</inlineHelpText>
        <label>Site Purpose</label>
        <referenceTo>AccountPurpose__c</referenceTo>
        <relationshipLabel>Center Purposes</relationshipLabel>
        <relationshipName>CenterPurposes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>